--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@ LAST-MODIFIED:20220413T015331Z
 LOCATION:placeXXX
 SEQUENCE:0
 STATUS:CONFIRMED
-SUMMARY:TEST0520
+SUMMARY:TEST0520V2
 TRANSP:OPAQUE
 END:VEVENT
 END:VCALENDAR
