--- a/index2.html
+++ b/index2.html
@@ -14,9 +14,9 @@ CREATED:20220413T015331Z
 DESCRIPTION:測試第一筆的說明...
 LAST-MODIFIED:20220413T015331Z
 LOCATION:地點001
-SEQUENCE:0
+SEQUENCE:1
 STATUS:CONFIRMED
-SUMMARY:測試999
+SUMMARY:測試999v2
 TRANSP:OPAQUE
 END:VEVENT
 BEGIN:VEVENT
@@ -42,9 +42,9 @@ CREATED:20220413T015331Z
 DESCRIPTION:測試第一筆的說明...
 LAST-MODIFIED:20220413T015331Z
 LOCATION:地點001
-SEQUENCE:0
+SEQUENCE:1
 STATUS:CONFIRMED
-SUMMARY:測試3
+SUMMARY:測試3v2
 TRANSP:OPAQUE
 END:VEVENT
 BEGIN:VEVENT
